Bug 90938 - SVGUseElement should not use Element::ensureShadowRoot()
Summary: SVGUseElement should not use Element::ensureShadowRoot()
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: DOM (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Shinya Kawanaka
URL:
Keywords:
Depends on:
Blocks: 77608
  Show dependency treegraph
 
Reported: 2012-07-10 22:01 PDT by Shinya Kawanaka
Modified: 2012-07-11 17:05 PDT (History)
7 users (show)

See Also:


Attachments
Patch (2.68 KB, patch)
2012-07-10 23:26 PDT, Shinya Kawanaka
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Shinya Kawanaka 2012-07-10 22:01:34 PDT
We would like to eliminate Element::ensureShadowRoot().
Let's remove it from SVGUseElement.
Comment 1 Shinya Kawanaka 2012-07-10 23:26:48 PDT
Created attachment 151610 [details]
Patch
Comment 2 Hajime Morrita 2012-07-11 02:28:59 PDT
Comment on attachment 151610 [details]
Patch

Looks trivial.
Comment 3 WebKit Review Bot 2012-07-11 17:05:29 PDT
Comment on attachment 151610 [details]
Patch

Clearing flags on attachment: 151610

Committed r122389: <http://trac.webkit.org/changeset/122389>
Comment 4 WebKit Review Bot 2012-07-11 17:05:33 PDT
All reviewed patches have been landed.  Closing bug.